<?xml version="1.0"?>
<package format="2">
  <name>keyboard_controller</name>
  <version>0.9.5</version>
  <description>Keyboard controller package</description>
  <author email="luca.tonin@dei.unipd.it">Luca Tonin</author>
  <maintainer email="luca.tonin@dei.unipd.it">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>
